--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -5,9 +5,9 @@
         <title>Error!</title>
     </head>
     <body>
-        <h1>Error!</h1>
-        <p>
-        	Something went wrong during the authentication process.
+        <p th:if="${status}">
+            <b>Response Status:</b> <span th:text="${status}">status-code</span> <span
+                th:if="${error}" th:text="'('+${error}+')'">error ...</span>
         </p>
     </body>
 </html>
