--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,8 +7,7 @@
     <body>
         <h1>You are logged in </h1>
         <p>
-            <a th:href="@{/saml/logout}">Global Logout</a><br/>
-    		<a th:href="@{/saml/logout?local=true}">Local Logout</a>
+            <a th:href="@{/login?logout}">Logout</a><br/>
         </p>
     </body>
 </html>
