added menu builder

--- a/src/main/resources/templates/eq.html
+++ b/src/main/resources/templates/eq.html
@@ -12,6 +12,12 @@
             <a th:href="@{/batch/greeting}">2 - (BATCH) Audit Batch</a><br/>
         </p>
         <p>
+            <a th:href="@{/rf/greeting}">3 - (RF) Custom link to Radio Frequency</a><br/>
+        </p>
+        <p>
+            <a th:href="@{/batch/greeting}">4 - (BATCH) Custom Link to Audit Batch</a><br/>
+        </p>
+        <p>
             <a th:href="@{/login?logout}">Logout</a><br/>
         </p>
     </body>
