added real menu items

--- a/src/main/resources/templates/eq.html
+++ b/src/main/resources/templates/eq.html
@@ -5,20 +5,14 @@
         <title>EQ Menu</title>
     </head>
     <body>
-        <p>
-            <a th:href="@{/rf/greeting}">1 - (RF) Radio Frequency</a><br/>
-        </p>
-        <p>
-            <a th:href="@{/batch/greeting}">2 - (BATCH) Audit Batch</a><br/>
-        </p>
-        <p>
-            <a th:href="@{/rf/greeting}">3 - (RF) Custom link to Radio Frequency</a><br/>
-        </p>
-        <p>
-            <a th:href="@{/batch/greeting}">4 - (BATCH) Custom Link to Audit Batch</a><br/>
-        </p>
-        <p>
-            <a th:href="@{/login?logout}">Logout</a><br/>
-        </p>
+    <p>
+        <a th:href="@{/weeks-of-supply}">04 -> 50 -> 01  - Work with weeks of supply tables </a><br/>
+    </p>
+    <p>
+        <a th:href="@{/order-parameters}">04 -> 50 -> 02 - Work with order parameters </a><br/>
+    </p>
+    <p>
+        <a th:href="@{/login?logout}">Logout</a><br/>
+    </p>
     </body>
 </html>
